# ammocount

./: .gitattributes  .gitignore  Cargo.toml  Readme.md  flake.nix
.github/workflows/: build.yml
src/: main.rs  playersearch.rs  wrapping.rs
