[package]
name = "ammocount"
version = "0.1.0"
edition = "2018"

[dependencies]
tf-demo-parser = { version = "0.4", git = "https://github.com/demostf/parser" }
#tf-demo-parser = { version = "0.4", path = "../demostf/tf-demo-parser" }
fnv = "1"
main_error = "0.1"
once_cell = "1"
steamid-ng = "1.0.0"
tracing-subscriber = "0.3.10"
tracing = "0.1.32"
splines = "4.1.0"
demostf-client = { version = "0.4.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread"] }

[profile.dev]
opt-level = 2

[profile.release]
lto = true